fix: 플레이어 하위 요소  z-index 수정

--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -49,7 +49,7 @@
 }
 
 .player-menu {
-  z-index: 4;
+  z-index: 5;
   position: absolute;
   display: flex;
 
@@ -115,7 +115,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 4;
   background-color: rgba($color: white, $alpha: 0.5);
   display: flex;
   flex-direction: column;
